--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Song Search</title>
+  <title>Search</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Song Search</h1>
+    <h1>Search</h1>
     <div class="search-container">
-      <input type="text" id="searchInput" placeholder="Search for songs..." />
+      <input type="text" id="searchInput" placeholder="Search for input..." />
       <button id="searchButton">Search</button>
     </div>
     <div id="results"></div>
