--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <input type="text" id="searchInput" placeholder="Search for input..." />
       <button id="searchButton">Search</button>
     </div>
+    <!-- Hiệu ứng loading -->
+    <div id="loading" class="loading-spinner">Loading...</div>
     <div id="results"></div>
     <div id="pagination" class="pagination"></div>
   </div>
